--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -130,3 +130,59 @@ body {
     z-index: 99;
   }
 }
+
+@media (max-width: 79em) {
+  .testimonials {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+
+    &__card:nth-child(1) {
+      grid-column: 1 / 3;
+    }
+
+    &__card:nth-child(3) {
+      grid-row: 2 / 3;
+    }
+
+    &__card:nth-child(5) {
+      grid-column: 1 / 4;
+      grid-row: 3 / 4;
+    }
+  }
+}
+
+@media (max-width: 59em) {
+  .testimonials {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
+
+    &__card:nth-child(1) {
+      grid-column: span 4;
+    }
+
+    &__card:nth-child(2) {
+      grid-column: span 2;
+    }
+
+    &__card:nth-child(3) {
+      grid-column: span 2;
+    }
+
+    &__card:nth-child(4) {
+      grid-column: span 4;
+      grid-row: 3 / 4;
+    }
+
+    &__card:nth-child(5) {
+      grid-column: span 4;
+      grid-row: 4 / 5;
+    }
+  }
+
+  @media (max-width: 37.75em) {
+    .testimonials {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
